allure-macros/tests/ui/fail/step_on_struct.stderr
error: expected `fn`
 --> tests/ui/fail/step_on_struct.rs:5:1
  |
5 | struct MyStep {
  | ^^^^^^
